# kllama

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app_runner.py  kllama.py  kllama_core.py  kllama_online.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_ollama_local.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.streamlit/: secrets.toml
docs/: MAINTAINING.md  USAGE.md
docs/releases/: 0.2.0.md  TEMPLATE.md
tests/: test_app_runner.py  test_kllama_app.py  test_kllama_core.py
